<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txtTitle1"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/txtTruckLength"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtTruckLength"
        android:inputType="number"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/txtMiles"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTruckLength"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtMiles"
        android:inputType="number"
        android:textSize="25sp" />


    <Button
        android:id="@+id/btnCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMiles"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/btnCompute"
        android:textSize="35sp" />


    <ImageView
        android:id="@+id/imgOpening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCompute"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/img"
        android:src="@drawable/truck_rental" />
</RelativeLayout>