<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/txtTitle2"
        android:textColor="#FF6600"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_below="@+id/txtTitle2"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hint="@string/txtCost"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imgTruck"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_below="@+id/txtTotalCost"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imgOfTruckLength" />

</RelativeLayout>